# prediction-trading

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  DESIGN.md  Makefile  README.md  app.py  automated_trader.py  mypy.ini  pyproject.toml  requirements.txt  scan_watchlist.py  stock_predictor.py
backend/: pyproject.toml
backend/src/prediction_trading/: __init__.py  data_fetcher.py  etf.py  logger.py  scanner.py  system.py
backend/src/prediction_trading/_cli/: automated_trader.py  scan_watchlist.py  stock_predictor.py
backend/src/prediction_trading/api/: deps.py  main.py  schemas.py
backend/src/prediction_trading/api/routers/: backtest.py  config.py  portfolio.py  predict.py  scan.py  trading.py
backend/src/prediction_trading/indicators/: __init__.py  technical.py
backend/src/prediction_trading/prediction/: __init__.py  ai_predictor.py  factor.py  predictor.py  signal_scorer.py  timing.py
backend/src/prediction_trading/reporting/: base.py  prediction_chart.py  prediction_report.py  report.py
backend/src/prediction_trading/trading/: __init__.py  auto_trader.py  broker.py  portfolio.py  risk_manager.py
backend/tests/: conftest.py  test_ai_predictor.py  test_alpaca_broker.py  test_alpaca_data_fetcher.py  test_auto_trader.py  test_backtester.py  test_data_fetcher.py  test_etf_analyzer.py  test_indicators.py  test_portfolio.py  test_reporting.py  test_risk_manager.py  test_scanner.py  test_signal_scorer.py  test_unified_predictor.py
dash-frontend/: app.py  pyproject.toml
dash-frontend/dash_ui/: api.py  components.py  theme.py
dash-frontend/dash_ui/pages/: alerts.py  analytics.py  backtest.py  home.py  portfolio.py  predict.py  scanner.py  settings.py  trading.py
frontend/: app.py  pyproject.toml
frontend/ui/: components.py  state.py  theme.py  watchlist.py
frontend/ui/pages/: alerts.py  backtest.py  dashboard.py  portfolio_builder.py  predict.py  scanner.py  settings.py  trading.py
(+61 files in other folders)
