[project]
name = "prediction-trading-dash"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.6.0",
    "plotly>=5.20.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dash_ui"]
