[project]
name = "prediction-trading-frontend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "prediction-trading-backend",
    "streamlit>=1.36.0",
    "plotly>=5.20.0",
]

[tool.uv.sources]
prediction-trading-backend = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ui"]
